# dipole

./: CMakeLists.txt  analyse.cpp  build.cpp  buildTree.cpp  constants.h  generic.slurm  main.cpp
